<resources>
    <string name="app_name">Component demo</string>
    <string name="action_list">列表</string>
    <string name="action_grid">网格</string>

    <!--lifecycle-->
    <string name="activity_name_lifecycle">life cycle</string>
    <string name="log_lifecycle_create">onCreate</string>
    <string name="text_lifecycle_separator">", "</string>
    <string name="dialog_lifecycle_title">对话框</string>
    <string name="dialog_lifecycle_message">请在log输出中确认当前Activity的生命周期</string>
    <string name="snack_lifecycle_ok_message">输出一条log记录。</string>
    <string name="snack_lifecycle_cancel_message">就这样吧，什么也不想做。</string>
    <string name="log_lifecycle_snack_ok">snack bar action</string>
    <string name="log_lifecycle_save">onSaveInstanceState</string>
    <string name="log_lifecycle_restore">onRestoreInstanceState</string>
    <string name="log_lifecycle_configuration">onConfigurationChanged</string>
    <string name="log_lifecycle_resume">onResume</string>
    <string name="log_lifecycle_start">onStart</string>
    <string name="log_lifecycle_pause">onPause</string>
    <string name="log_lifecycle_restart">onRestart</string>
    <string name="log_lifecycle_stop">onStop</string>
    <string name="log_lifecycle_destroy">onDestroy</string>
    <string name="log_lifecycle_dismiss_d">dialog dismiss</string>
    <string name="log_lifecycle_dismiss_w">window dismiss</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_section1">rock</string>
    <string name="title_section2">paper</string>
    <string name="title_section3">scissors</string>
    <string name="progressbar_horizontal">Widget.ProgressBar.Horizontal</string>
    <string name="progressbar_inverse">Widget.ProgressBar.Inverse</string>
    <string name="progressbar_large_inverse">Widget.ProgressBar.Large.Inverse</string>
    <string name="progressbar_small_inverse">Widget.ProgressBar.Small.Inverse</string>
    <string name="indeterminate">indeterminate</string>
    <string name="appcompatratingbar">AppCompatRatingBar</string>
    <string name="appcompatseekbar">AppCompatSeekBar</string>
    <string name="lifecycle_getlocal">getLocalVisibleRect:</string>
    <string name="lifecycle_getglobal">getGlobalVisibleRect:</string>
    <string name="lifecycle_getonscreen">getLocationOnScreen:x,</string>
    <string name="lifecycle_getinwindow">getLocationInWindow:x,</string>
    <string name="lifecycle_y">; y,</string>
    <string name="viewpager_mora">mora</string>

    <string name="tab_event">事件</string>
    <string name="tab_diary">日记</string>
    <string name="tab_trace">打卡</string>
    <string name="tab_milepost">里程碑</string>
    <string name="defaultNotStudyMessage">未实现的例子</string>
    <string name="exit_button">跳出</string>
    <string name="start_button">开始</string>
    <string name="notification_normal">Normal view</string>
    <string name="notification_big">big view</string>
    <string name="notification_big_true">big picture</string>
    <string name="notification_big_inbox">big inbox</string>
    <string name="notification_custom">custom view</string>
    <string name="notification_back_app">back application</string>
    <string name="notification_back_desk">back desktop</string>
    <string name="notification_progressbar">progress bar</string>
    <string name="notification_title">加班通知。</string>
    <string name="notification_detail">项目组全体员工近期需要加班。</string>
    <string name="notification_large_detail">客户已经在催了，我们必须更加努力才行，项目组全体员工准备开始加班了。</string>
    <string name="notification_inbox">2016/12/2</string>
    <string name="notification_complete">已经全部完成！</string>
    <string name="indicator">IndicatorProgressBar</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <string name="hello_blank_fragment3">Hello blank fragment 3</string>
    <string name="special_activity">Special activity</string>
    <string name="broadcast_message">内部发送的广播消息</string>
    <string name="send_broadcast">send broadcast</string>
    <string name="notification_title_broadcast">Broadcast</string>
    <string name="title_activity_action">ActionActivity</string>
    <string name="baidu">http://www.baidu.com</string>
    <string name="send_mail">send mail</string>
    <string name="open_web">open web</string>
    <string name="open_file">open file</string>
    <string name="share_select">share select</string>
    <string name="mail_waxwork">waxwork@hotmail.com</string>
    <string name="staggered">瀑布流</string>

</resources>
