<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vigor.component.MainActivity">
    <item
        android:id="@+id/action_list"
        android:icon="@android:drawable/ic_dialog_map"
        android:orderInCategory="100"
        android:title="@string/action_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_grid"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:orderInCategory="100"
        android:title="@string/action_grid"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_staggered"
        android:icon="@android:drawable/ic_input_get"
        android:orderInCategory="100"
        android:title="@string/staggered"
        app:showAsAction="never" />
</menu>
