<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vigorx.viewdemo.progressbar.ProgressDemoActivity">

    <TextView
        android:id="@+id/progress_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/progressbar_horizontal" />

    <ProgressBar
        android:id="@+id/progress1"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:max="100"
        android:secondaryProgress="50" />

    <TextView
        android:id="@+id/progress_inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/progressbar_inverse" />

    <ProgressBar
        android:id="@+id/progress2"
        style="@android:style/Widget.Material.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/progress_large_inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/progressbar_large_inverse" />

    <ProgressBar
        android:id="@+id/progress4"
        style="@android:style/Widget.ProgressBar.Large.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/progress_small_inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/progressbar_small_inverse" />

    <ProgressBar
        android:id="@+id/progress6"
        style="@android:style/Widget.ProgressBar.Small.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/progress_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/indeterminate" />

    <ProgressBar
        android:id="@+id/progress5"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/indicator" />

    <com.vigorx.viewdemo.progressbar.IndicatorProgressBar
        android:id="@+id/indicator_progress_bar"
        style="@style/Widget.ProgressBar.IndicatorProgressBar"
        offset="3dip"
        textSize="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" />

    <TextView
        android:id="@+id/progress_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/appcompatratingbar" />

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/progress3"
        style="@android:style/Widget.Holo.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:numStars="5"
        android:rating="4"
        android:stepSize="1" />

    <TextView
        android:id="@+id/progress_seek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/appcompatseekbar" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/progress7"
        style="@android:style/Widget.Holo.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:max="200"
        android:progress="50" />

</LinearLayout>
