<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vigorx.viewdemo.action.ActionActivity"
    tools:showIn="@layout/activity_action"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/action_view_url"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/open_web"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_view_file"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/action_view_file"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/open_file"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/action_send_share"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/share_select"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_view_url"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/action_send_mail"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/send_mail"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/action_send_share"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
