<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customtab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vigorx.viewdemo.customtab.CustomTabDemoActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:background="@drawable/tab_background"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <com.vigorx.viewdemo.customtab.TabLabel
            android:id="@+id/id_button_event"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:padding="5dp"
            customtab:tab_icon="@drawable/tab_event"
            customtab:tab_text="@string/tab_event"
            customtab:tab_color="#ff45c01a"
            customtab:tab_text_size="12sp"
            />

        <com.vigorx.viewdemo.customtab.TabLabel
            android:id="@+id/id_button_diary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:padding="5dp"
            customtab:tab_icon="@drawable/tab_diary"
            customtab:tab_text="@string/tab_diary"
            customtab:tab_color="#ff45c01a"
            customtab:tab_text_size="12sp"
            />
        <com.vigorx.viewdemo.customtab.TabLabel
            android:id="@+id/id_button_trace"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:padding="5dp"
            customtab:tab_icon="@drawable/tab_trace"
            customtab:tab_text="@string/tab_trace"
            customtab:tab_color="#ff45c01a"
            customtab:tab_text_size="12sp"
            />
        <com.vigorx.viewdemo.customtab.TabLabel
            android:id="@+id/id_button_milepost"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:padding="5dp"
            customtab:tab_icon="@drawable/tab_milepost"
            customtab:tab_text="@string/tab_milepost"
            customtab:tab_color="#ff45c01a"
            customtab:tab_text_size="12sp"
            />

    </LinearLayout>
</LinearLayout>
